[tool.poetry]
name = "kiu test"
version = "0.1.0"
description = ""
authors = ["Hugo Chanampe <hugogher@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.0.2"
flake8 = "^7.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
